--- a/index.html
+++ b/index.html
@@ -28,9 +28,27 @@
 				<div class="icon-search"></div>
 				<a href="#">go</a>
 			</div>
-			<nav class="nav_header"></nav>
+			<nav class="nav_header">
+        <ul>
+				<li><a href="#">All the Latest</a></li>
+				<li><a href="#">Recommendations</a></li>
+				<li><a href="#">Companies</a></li>
+				<li><a href="#">Portfolios</a></li>
+				<li><a href="#">Investor’s College</a></li>
+				<li class="chanch_blok1"><a href="#">Sign Up Today</a></li>
+        </ul>
+			</nav>
 	  </div>
 		<div class="heder_block_2">
+			<nav class="nav_header2">
+      <ul>
+				<li><a href="#">Recent Changes</a></li>
+				<li><a href="#">Buys (16)</a></li>
+				<li><a href="#">Sells (27)</a></li>
+				<li><a href="#">Holds (53)</a></li>
+				<li><a href="#">Recommendation terms</a></li>
+			</ul>
+		</nav>
 		</div>
 	</header>
 	<div class="main">
