--- a/index.html
+++ b/index.html
@@ -52,10 +52,77 @@
 		</div>
 	</header>
 	<div class="main">
+		<div class="searc_main_block">
+			<div><span>Special Alert</span></div>
+			<form>
+				<input class="first_input_block" placeholder="&nbsp Praesent aliquam,  justo convallis luctus rutrum, erat nulla fermentum diam, at nonummy quam  ante ac quam">
+			</form>
+		</div>
+  <div class="first_block_main">
+		<div class="gallery_1_main">1</div>
+		<div class="news_1_main">2
+			Stocks in Detail
+			<h2>Article Headline goes here</h2>
+			<p>24 Jan 10 | Buy 2.70 | Lorem ipsum dolor sit amet,
+			conse ctetuer adipiscing elit. Praesent aliquam,
+			 justo convallis luctus rutrum, erat nulla fermentum diam.</p>
+			 InVestor’s College
+			 <h2>Article Headline goes here</h2>
+			 <p>18 Jan 10 | Lorem ipsum dolor sit amet, conse ctetuer
+			 adipi scing elit. Praesent aliquam,  justo convallis luctus.</p>
+			 Stock In Detail
+			 <h2>Article Headline goes here</h2>
+			 <p>18 Jan 10 | Lorem ipsum dolor sit amet, conse ctetuer adipi scing elit.
+			  Praesent aliquam,  justo convallis luctus.</p>
+				Stock In Detail
+				<h2>Article Headline goes here</h2>
+				<p>18 Jan 10 | Lorem ipsum dolor sit amet, conse ctetuer adipi scing elit.
+				 Praesent aliquam,  justo convallis luctus.</p>
+				 Nam blandit quam ut lacus. Quisque ornare
+Ligula. Phasellus tristique purus a augue condimentum adipiscing Suspendisse potenti.
+		</div>
+		<div class="contacts_1_main">3</div>
+	</div>
+	<div class="rec"></div>
+
+
+  <div class="news_header_1"></div>
+	<div class="news_main_1">
+		<div class="block_1_news_1"></div>
+		<div class="video_block"></div>
+		<div class="right_block_1"></div>
+	</div>
+
+	<div class="news_header_1"></div>
+	<div class="news_main_1">
+		<div class="block_1_news_1"></div>
+		<div class="video_block"></div>
+		<div class="right_block_1"></div>
+	</div>
+
+	<div class="news_header_1"></div>
+	<div class="news_main_1">
+		<div class="block_1_news_1"></div>
+		<div class="video_block"></div>
+		<div class="right_block_1"></div>
+	</div>
+
+
 	</div>
 	<footer>
-		<div class="footer_block_1">1</div>
-		<div class="footer_block_2"></div>
+		<div class="footer_block_1">
+      <div class="footer_text_block">
+       <div class="text_block_1"></div>
+			 <div class="text_block_2"></div>
+			 <div class="text_block_3"></div>
+			 <div class="text_block_4"></div>
+			 <div class="text_block_5"></div>
+			 </div>
+		</div>
+		<div class="footer_block_2">
+			<div class="info_site">
+			</div>
+		</div>
   </footer>
 </body>
 </html>
